--- a/Doc-Assist/index.html
+++ b/Doc-Assist/index.html
@@ -1,21 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <!-- FONT AWESOME LINK  -->
-    <script src="https://kit.fontawesome.com/c2247944bd.js" crossorigin="anonymous"></script>
-        <!-- SPLINE LINK  -->
-    <!-- <script type="module" src="https://unpkg.com/@splinetool/viewer/build/spline-viewer.js"></script> -->
 
-    <script type="module" src="https://unpkg.com/@splinetool/viewer/build/spline-viewer.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/medVista_logo.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- FONT AWESOME LINK  -->
+  <script src="https://kit.fontawesome.com/c2247944bd.js" crossorigin="anonymous"></script>
+  <!-- SPLINE LINK  -->
+  <!-- <script type="module" src="https://unpkg.com/@splinetool/viewer/build/spline-viewer.js"></script> -->
 
-      <!-- <spline-viewer url="https://my.spline.design/roomgirlreadingcopy-956223557f9947d30d37387cacc12398/"></spline-viewer> -->
-    <title>Med Vista</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <script type="module" src="https://unpkg.com/@splinetool/viewer/build/spline-viewer.js"></script>
+
+  <!-- <spline-viewer url="https://my.spline.design/roomgirlreadingcopy-956223557f9947d30d37387cacc12398/"></spline-viewer> -->
+  <title>Med Vista</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
